--- a/src/App.scss
+++ b/src/App.scss
@@ -1,20 +1,16 @@
 .nycsurf {
-  text-align: center;
+  text-align: left;
+  padding: 2em;
+  height: 100%;
 }
 
-.nycsurf-header {
-  height: 150px;
-  padding: 20px;
-}
+.nycsurf-header { }
 
 .nycsurf-title {
   font-size: 4em;
 }
 
 .nycsurf-main {
-  margin: 0 auto;
-  width: 40em;
-
   h2 {
     font-size: 2em;
   }
